# SmartHomeSim

./: CMakeLists.txt  Makefile  readme.md
include/: appGui.h  appMenu.h  logger.h  smartBulb.h  smartDevice.h  smartManager.h  smartSocket.h  smartThermometer.h  smartThermostat.h
include/gui/: guiBasePage.h  guiPageConfig.h  guiPageControl.h  guiPageMain.h
src/: appGui.cpp  appMenu.cpp  logger.cpp  main.cpp  smartBulb.cpp  smartDevice.cpp  smartManager.cpp  smartSocket.cpp  smartThermometer.cpp  smartThermostat.cpp
